# reminity

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: ci.yaml
examples/: run.py
remivity/: __init__.py  config.py  exceptions.py
remivity/api/: endpoints.py
remivity/core/: __init__.py  audio_extractor.py  processor.py  summarizer.py  transcriber.py  youtube_handler.py
remivity/utils/: __init__.py
remivity/web/: app.py
tests/: __init__.py  ci.yaml  test_remivity.py
