[tool.poetry]
name = "Remivity"
version = "0.1.0"
description = "A local video summarizer."
authors = ["Kim, Andrew <andrewkimka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
fastapi = "^0.115.13"
faster-whisper = "^1.1.1"
llama-index-llms-ollama = "^0.6.2"
yt-dlp = "^2025.6.9"
pydantic = "^2.11.7"
gradio = "^5.34.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.9.1"
mypy = "^1.16.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"
ruff = "^0.12.0"

[tool.coverage.run]
branch = true
source = ["remivity"]

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.mypy]
files = ["remivity", "tests"]
cache_dir = "${HOME}/.mypy_cache"
ignore_errors = false
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["remivity"]

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
unsafe-fixes = true

lint.select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # bugbear
  "SIM", # simplify
  "D",   # pydocstyle
  "PL",  # pylint-like
  "C90", # mccabe
]

lint.ignore = []

exclude = ["tests/data", ".venv", "build", "dist"]

[tool.ruff.lint.pydocstyle]
convention = "google"  # or "numpy" or "pep257"
